--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 # @link https://travis-ci.org/
 
 # For use with the Underscores WordPress theme.
-# @link https://github.com/Automattic/_s
+# @link https://github.com/Automattic/pixcell_medical
 
 # Tell Travis CI which OS and which distro to use.
 os: linux
